# hacknation-amorki-krakena-zakochaj-sie-w-bydgoszczy

./: docker-compose.yml
be/: pyproject.toml
be/app/: db.py  dependencies.py  main.py  settings.py
be/app/routers/: blobs.py  scenarios.py  users.py
db/init/: blobs.sh  seed.js
fe/: .dockerignore  .gitignore  Dockerfile  README.md  pubspec.yaml
fe/android/app/: build.gradle.kts
fe/android/app/src/main/: AndroidManifest.xml
fe/android/app/src/main/kotlin/com/example/zakochaj_sie_w_bydgoszczy_fe/: MainActivity.kt
fe/ios/Runner/: Info.plist
fe/ios/Runner.xcodeproj/: project.pbxproj
fe/lib/: api.dart  date_page.dart  event_tile.dart  header.dart  main.dart  main_app_bar.dart  map_view.dart  match.dart  quiz_view.dart  swapper.dart
fe/lib/buttons/: stamped_button.dart
fe/lib/preferences/: preferences.dart  preferences_screen.dart
fe/lib/quiz/: answer_option.dart  fun_fact.dart
fe/linux/: CMakeLists.txt
fe/linux/runner/: my_application.cc
fe/macos/Runner.xcodeproj/: project.pbxproj
fe/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
fe/macos/Runner/Configs/: AppInfo.xcconfig
fe/test/: widget_test.dart
fe/web/: index.html  manifest.json
fe/windows/: CMakeLists.txt
fe/windows/runner/: Runner.rc  main.cpp
