[project]
name = "zakochaj-sie-w-bydgoszczy-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.124.0",
    "pydantic-settings>=2.12.0",
    "pymongo[srv]>=4.15.5",
]

[dependency-groups]
dev = ["black>=25.11.0", "isort>=7.0.0"]
